[gd_scene load_steps=4 format=2]

[ext_resource path="res://WaitingRoom/waitingRoom.gd" type="Script" id=1]
[ext_resource path="res://multiplayerWaitingRoom.tscn" type="PackedScene" id=2]

[sub_resource type="ButtonGroup" id=1]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 504.0
margin_top = 236.0
margin_right = 776.0
margin_bottom = 483.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 272.0
margin_bottom = 31.0
text = "Lobby
"
align = 1
uppercase = true

[node name="SongLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 272.0
margin_bottom = 60.0
align = 1
autowrap = true

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 272.0
margin_bottom = 177.0
custom_constants/vseparation = 15
custom_constants/hseparation = 30
columns = 2

[node name="NameLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 42.0
margin_bottom = 19.0
text = "Name:"

[node name="NameTextBox" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 72.0
margin_right = 272.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
text = "Enter Name"
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="IPLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 44.0
margin_right = 42.0
margin_bottom = 58.0
text = "IP: "

[node name="IPTextBox" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 72.0
margin_top = 39.0
margin_right = 272.0
margin_bottom = 63.0
rect_min_size = Vector2( 145, 0 )
text = "Enter IP"
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="PortLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 83.0
margin_right = 42.0
margin_bottom = 97.0
text = "Port:"

[node name="PortTextBox" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 72.0
margin_top = 78.0
margin_right = 272.0
margin_bottom = 102.0
rect_min_size = Vector2( 145, 0 )
text = "Enter Port"
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="JoinBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 192.0
margin_right = 272.0
margin_bottom = 212.0
text = "Ready"

[node name="ReturnBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 227.0
margin_right = 272.0
margin_bottom = 247.0
text = "Return to menu"

[node name="WaitingRoom" parent="." instance=ExtResource( 2 )]

[node name="ItemList" parent="WaitingRoom/CenterContainer/VBoxContainer" index="1"]
items = [ "Player 1", null, false, "Player 2", null, false ]

[node name="MMM" parent="WaitingRoom/ModsHolder/Mods/SpeedMod/C" index="0"]
group = SubResource( 1 )

[node name="MM" parent="WaitingRoom/ModsHolder/Mods/SpeedMod/C" index="1"]
group = SubResource( 1 )

[node name="M" parent="WaitingRoom/ModsHolder/Mods/SpeedMod/C" index="2"]
group = SubResource( 1 )

[node name="Normal" parent="WaitingRoom/ModsHolder/Mods/SpeedMod/C" index="3"]
group = SubResource( 1 )

[node name="P" parent="WaitingRoom/ModsHolder/Mods/SpeedMod/C" index="4"]
group = SubResource( 1 )

[node name="PP" parent="WaitingRoom/ModsHolder/Mods/SpeedMod/C" index="5"]
group = SubResource( 1 )

[node name="PPP" parent="WaitingRoom/ModsHolder/Mods/SpeedMod/C" index="6"]
group = SubResource( 1 )

[node name="PPPP" parent="WaitingRoom/ModsHolder/Mods/SpeedMod/C" index="7"]
group = SubResource( 1 )

[node name="Custom" parent="WaitingRoom/ModsHolder/Mods/SpeedMod/C" index="8"]
group = SubResource( 1 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/JoinBtn" to="." method="_on_JoinBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ReturnBtn" to="." method="_on_ReturnBtn_pressed"]
[connection signal="pressed" from="WaitingRoom/CenterContainer/VBoxContainer/ReadyBtn" to="." method="_on_ReadyBtn_pressed"]

[editable path="WaitingRoom"]
